renaming searching back to filtering
