# backend/app/controllers/api/v1/investors_controller.rb
@@ -5,7 +5,7 @@ module API
 
       def index
         investors = Investor.all.includes(account: [:owner, {picture_attachment: :blob}])
-        investors = API::Filterer.new(investors, search_params.to_h).call
+        investors = API::Filterer.new(investors, filter_params.to_h).call
         pagy_object, investors = pagy(investors, page: current_page, items: per_page)
         render json: InvestorSerializer.new(
           investors,
@@ -34,8 +34,8 @@ module API
         Investor.find_by!(account_id: account.id)
       end
 
-      def search_params
-        params.fetch(:search, {})
+      def filter_params
+        params.fetch(:filter, {})
           .permit :category, :impact, :sdg, :instrument_type, :ticket_size, :only_verified,
             category: [], impact: [], sdg: [], instrument_type: [], ticket_size: []
       end
