# backend/app/controllers/api/v1/projects_controller.rb
@@ -7,7 +7,7 @@ module API
 
       def index
         projects = Project.all.includes(:project_developer, :involved_project_developers, project_images: {file_attachment: :blob})
-        projects = API::Filterer.new(projects, search_params.to_h).call
+        projects = API::Filterer.new(projects, filter_params.to_h).call
         pagy_object, projects = pagy(projects, page: current_page, items: per_page)
         render json: ProjectSerializer.new(
           projects,
@@ -34,8 +34,8 @@ module API
         @project = Project.friendly.find(params[:id])
       end
 
-      def search_params
-        params.fetch(:search, {})
+      def filter_params
+        params.fetch(:filter, {})
           .permit :category, :sdg, :instrument_type, :ticket_size,
             category: [], sdg: [], instrument_type: [], ticket_size: []
       end
